--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@reduxjs/toolkit": "^2.7.0",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.3",
+    "@uidotdev/usehooks": "^2.4.1",
     "normalize.css": "^8.0.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
