--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.3",
     "@uidotdev/usehooks": "^2.4.1",
+    "formik": "^2.4.6",
     "normalize.css": "^8.0.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
